Urmeaza schimbare parola si hangfire
