# ClientApp/swagger.json
@@ -63,6 +63,28 @@
         }
       }
     },
+    "/api/Account/deleteUser/{username}": {
+      "delete": {
+        "tags": [
+          "Account"
+        ],
+        "parameters": [
+          {
+            "name": "username",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/Account/login": {
       "post": {
         "tags": [
@@ -4062,6 +4084,7 @@
           "city",
           "country",
           "dateOfBirth",
+          "email",
           "gender",
           "knownAs",
           "password",
@@ -4070,6 +4093,9 @@
         "type": "object",
         "properties": {
           "username": {
+            "type": "string"
+          },
+          "email": {
             "type": "string"
           },
           "knownAs": {
@@ -5110,6 +5136,10 @@
             "nullable": true
           },
           "gender": {
+            "type": "string",
+            "nullable": true
+          },
+          "email": {
             "type": "string",
             "nullable": true
           }
