# Proiect_licenta/Entities/EmailConfiguration.cs
@@ -1,0 +1,11 @@
+﻿namespace Proiect_licenta.Entities
+{
+    public class EmailConfiguration
+    {
+        public string From { get; set; }
+        public string SmtpServer { get; set; }
+        public int Port { get; set; }
+        public string UserName { get; set; }
+        public string Password { get; set; }
+    }
+}
